Chapter14/service1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-1
spec:
  selector:
    name: service-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
